# Computational-Physics

./: .gitignore  README.md
01-Random-Numbers/: CMakeLists.txt  README.md  main.cpp
01-Random-Numbers/include/: Tests.hpp  circle.hpp  crng.hpp  stats.hpp  stats.tpp
01-Random-Numbers/python_scripts/: 1a.txt  1b.txt  2.txt  figure.gplt  matplotlibrc  plot.py
01-Random-Numbers/src/: CMakeLists.txt  Tests.cpp  crng.cpp
02-Percolation/: CMakeLists.txt  README.md  main.cpp
02-Percolation/include/: Forestfire.hpp  Percolation.hpp  latticeview.h  percolationlattice.hpp  savedata.h
02-Percolation/python_scripts/: 3a_vec_spanningCluster_N100.txt  3b_vec_shortest_path_N050.txt  3b_vec_shortest_path_N100.txt  3b_vec_shortest_path_N300.txt  3c_vec_lifeTime_N020.txt  3c_vec_lifeTime_N050.txt  3c_vec_lifeTime_N100.txt  plot.py
02-Percolation/python_scripts/alt/: 3a_vec_spanningCluster_N020.txt  3a_vec_spanningCluster_N050.txt  3a_vec_spanningCluster_N300.txt  3b_vec_shortest_path_N020.txt  3c_vec_lifeTime_N300.txt
02-Percolation/src/: CMakeLists.txt  Forestfire.cpp  Percolation.cpp  percolationlattice.cpp
03-Cluster-Size-Distribution/: CMakeLists.txt  README.md
03-Cluster-Size-Distribution/include/: Forestfire.hpp  Percolation.hpp  csd.hpp  savedata.h
03-Cluster-Size-Distribution/python_scripts/: plot.py
03-Cluster-Size-Distribution/src/: CMakeLists.txt  Forestfire.cpp  Percolation.cpp  csd.cpp
04-Fractal-Dimension/: CMakeLists.txt  README.md  main.cpp
04-Fractal-Dimension/include/: Fractal.hpp  Percolation.hpp  latticeview.h  savedata.hpp  statistics.h
04-Fractal-Dimension/python_scripts/: BoxCounting_NR_N100.txt  BoxCounting_NR_N1000.txt  BoxCounting_NR_N20.txt  BoxCounting_NR_N50.txt  SandBox_MR_N10.txt  SandBox_MR_N100.txt  SandBox_MR_N1000.txt  SandBox_MR_N20.txt  SandBox_MR_N50.txt  SandBox_MR_N9.txt  plot.py
04-Fractal-Dimension/src/: CMakeLists.txt  Fractal.cpp  Percolation.cpp  savedata.cpp
05-Monte-Carlo-Integral/: CMakeLists.txt  README.md  main.cpp
05-Monte-Carlo-Integral/include/: Spheres.hpp  savedata.hpp
05-Monte-Carlo-Integral/python_scripts/: mc_experiments_10_10.txt  mc_experiments_40_10.txt  mc_experiments_Mmax500000_n2_L10.txt  plot.py
05-Monte-Carlo-Integral/python_scripts/alt/: mc_experiments.txt  mc_experiments_100_10.txt  mc_experiments_10_10.txt  mc_experiments_50_10.txt  mc_experiments_70_10.txt  mc_experiments_Mmax500000_n2_L10.txt  mc_experiments_Mmax500000_n5_L10.txt
05-Monte-Carlo-Integral/python_scripts/vary_n/: 2_mc_experiments_Mmax300000_n5.txt  3_mc_experiments_Mmax300000_n20.txt  4_mc_experiments_Mmax300000_n40.txt  5_mc_experiments_Mmax300000_n50.txt  stats.py
05-Monte-Carlo-Integral/src/: CMakeLists.txt  Montecarlo.cpp  Spheres.cpp  savedata.cpp
06-Ising-Model/: CMakeLists.txt  README.md
06-Ising-Model/include/: Ising.hpp  Montecarlo.hpp  savedata.hpp
06-Ising-Model/python_scripts/: plot.py
06-Ising-Model/python_scripts/n1024/: ising_n1024_0.5000.txt  ising_n1024_1.0000.txt  ising_n1024_1.5000.txt  ising_n1024_2.0000.txt  ising_n1024_2.2690.txt  ising_n1024_3.0000.txt
06-Ising-Model/python_scripts/n256/: ising_n256_0.5000.txt  ising_n256_1.0000.txt  ising_n256_1.5000.txt  ising_n256_2.0000.txt  ising_n256_2.2690.txt  ising_n256_3.0000.txt
06-Ising-Model/python_scripts/n64/: ising_n64_0.5000.txt  ising_n64_1.0000.txt  ising_n64_1.5000.txt  ising_n64_2.0000.txt  ising_n64_2.2690.txt  ising_n64_3.0000.txt
06-Ising-Model/src/: CMakeLists.txt  Ising.cpp  Ising_conflict-20180913-173433.cpp  savedata.cpp
07-Diffusion-Limited-Aggregation/: CMakeLists.txt  README.md
07-Diffusion-Limited-Aggregation/include/: dla.hpp
07-Diffusion-Limited-Aggregation/python_scripts/: plot.py
07-Diffusion-Limited-Aggregation/src/: CMakeLists.txt  dla.cpp
08-Random-Walk/: CMakeLists.txt  README.md
08-Random-Walk/include/: Randomwalk.hpp
08-Random-Walk/python_scripts/: plot.py
08-Random-Walk/src/: CMakeLists.txt  Randomwalk.cpp
09-Newton-Method/: CMakeLists.txt  README.md  test.cpp
09-Newton-Method/include/: Nullstelle.hpp  savedata.hpp
09-Newton-Method/python_scripts/: plot.py
09-Newton-Method/src/: CMakeLists.txt  Nullstelle.cpp  savedata.cpp
10-Inclined-Throw/: CMakeLists.txt  README.md
10-Inclined-Throw/include/: ODEintegrator.hpp  Throw.hpp
10-Inclined-Throw/python_scripts/: plot.py
10-Inclined-Throw/src/: CMakeLists.txt  ODEintegrator.cpp  Throw.cpp
11-Relaxation-Methods/: CMakeLists.txt  README.md
11-Relaxation-Methods/include/: PDEintegrator.hpp  poisson2d.hpp
11-Relaxation-Methods/python_scripts/: GaussSeidel_ncharge_1_05.txt  GaussSeidel_ncharge_3_02.txt  Jacobi_ncharge_1_05.txt  Jacobi_ncharge_1_075.txt  Jacobi_ncharge_3_02.txt  plot.py
11-Relaxation-Methods/python_scripts/alt/: test2.txt  test3.txt
11-Relaxation-Methods/src/: PDEintegrator.cpp  poisson2d.cpp
12-Conjugate-Gradient/: CMakeLists.txt  README.md  main.cpp
12-Conjugate-Gradient/include/: PDEintegrator.hpp  poisson2d.hpp
12-Conjugate-Gradient/python_scripts/: Jacobi_ncharge_1_05.txt  plot.py
12-Conjugate-Gradient/src/: CMakeLists.txt  PDEintegrator.cpp  cg.cpp  poisson2d.cpp
13-Wave/: CMakeLists.txt  README.md
13-Wave/include/: Wave.hpp
13-Wave/python_scripts/: plot.py
13-Wave/src/: CMakeLists.txt  Wave.cpp  Wave_arma.cpp
share/include/: latticeview.h  savedata.h  savedata.tpp  squarelattice.hpp
share/src/: CMakeLists.txt  savedata.cpp  squarelattice.cpp
